--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
-/Assets/Samples
-/Assets/Samples.meta
+/Assets/Ignore
+/Assets/Ignore.meta
