--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.25",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.jobs": "0.70.0-preview.7",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.splines": "2.4.0",
     "com.unity.textmeshpro": "3.0.6",
