--- a/Assets/Default/Scripts/sampleScene.asmdef
+++ b/Assets/Default/Scripts/sampleScene.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "sampleScene",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:75469ad4d38634e559750d17036d5f7c"
+    ],
     "includePlatforms": [
         "Android",
         "EmbeddedLinux",
